--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Surpresa</title>
 </head>
 <body>
-    
+    <h1>Feliz Aniversário</h1>
+    <main>
+        <h2>Para o meu amor</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad at voluptatum quae. Voluptates voluptas consequatur magni, voluptatem fuga neque iusto, animi distinctio architecto, esse facere sit dignissimos exercitationem sint dolores?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deserunt quia placeat omnis consectetur tempora id aliquam blanditiis ipsam veritatis voluptatum dolores odio laudantium dolorem molestias corrupti, optio sit culpa.</p>
+    </main>
+    <section class="video">
+        <video controls>
+            <source src="videos/love.mp4" type="video/mp4">
+        </video>
+    </section>
+    <footer>
+        <p>Desenvolvido por Vinícius, um eterno apaixonado</p>
+    </footer>
 </body>
 </html>
