--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deserunt quia placeat omnis consectetur tempora id aliquam blanditiis ipsam veritatis voluptatum dolores odio laudantium dolorem molestias corrupti, optio sit culpa.</p>
     </main>
     <section class="video">
-        <video controls>
-            <source src="videos/love.mp4" type="video/mp4">
-        </video>
+        <iframe class="vid" width="560" height="315" src="https://www.youtube.com/embed/09xxVtvN2sQ?si=lCUTufik6zOMxyEu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <footer>
         <p>Desenvolvido por Vinícius, um eterno apaixonado</p>
