--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
     <h1>Feliz Aniversário</h1>
     <main>
         <h2>Para o meu amor</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad at voluptatum quae. Voluptates voluptas consequatur magni, voluptatem fuga neque iusto, animi distinctio architecto, esse facere sit dignissimos exercitationem sint dolores?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deserunt quia placeat omnis consectetur tempora id aliquam blanditiis ipsam veritatis voluptatum dolores odio laudantium dolorem molestias corrupti, optio sit culpa.</p>
+        <p>
+            Oi minha princesa &#x1F970;&#x1F497;. Achou que fosse só aquilo?
+        </p>
+        <p>
+            Feliz Aniversário meu amor! <br> Parabéns pelo seu dia meu amor, que seu dia seja incrível, maravilhoso e abençoado.
+        </p> 
+        <p>
+            Hoje você esta completando mais um ano, crescendo e amadurecendo ainda mais nega, sei que assusta, está ficando mais velha, as responsabilidades aumentam e precisa cada vez mais estar com a cabeça no lugar, mas eu sei que você está preparada para tudo o que vier, você é uma menina forte, com a cabeça boa, pronta para superar tudo. Claro que não é só isso, crescer é bom nega, é o ciclo natural da vida, mostra que superou um ano com força e coragem, com muitas vivências e aprendizados, mostra o quanto você cresceu, o que você mudou, as suas melhoras para chegar mais perto de se tornar a mulher incrível que você será, aliás, já é.
+        </p>
+        <p>
+            Nega, você é uma garota incrível e estou muito feliz em ter você na minha vida. Queria poder estar com você e segurando a sua mão dizer o quanto eu te amo e que estou disposto a fazer de tudo pela sua felicidade e como sempre digo, eu sempre vou lutar por nós. 
+        </p>
+        <p>
+            Acabei enrolando bastante e escrevendo muito kkkkkk. Só queria te desejar um feliz aniversário meu amor, muita saúde e paz nega, que Deus te abençoe na sua jornada e te proteja sempre, que você sempre seja essa linda menina em que eu me apaixonei, você é perfeita amor, nunca perca seu brilho, ele é tão lindo e intenso que não pode ser apagado por ninguém. Queria poder te beijar, te abraçar e te presentear nega, pode não ser nesse, mais espero que seja no proximo, estou rezando por isso, eu te amo muito meu amor.
+        </p>
+        <p>
+            Porém preparei uma surpresinha, para demonstrar o quanto eu te amo, pode não ser de valor, pórem acredito que tempo e dedicação são o que realmente demonstra o quanto você gosta de alguém, então quis te falar o quanto me importo contigo nega, além do texto, eu fiz um video, não está perfeito, não é a melhor voz kkkkk, mais so queria demonstrar o quanto eu te amo, o quão especial oce é para mim nega.
+        </p>
+
     </main>
     <section class="video">
         <iframe class="vid" width="560" height="315" src="https://www.youtube.com/embed/09xxVtvN2sQ?si=lCUTufik6zOMxyEu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
